test/spec_vectors/array/fail/module_3.wat
(module (type (array (ref 1))))